# mvp-config-driven

./: .env  .env.azure  .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_COMPARATIVO_PYTHON.md  AZURE_DEPLOYMENT_CHECKLIST.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEAN_DOCS_REPORT.md  CODEOWNERS  EXECUTIVE_SUMMARY.md  MIGRATION.md  Makefile  PROJECT_SUMMARY.md  PROYECTO_COMPLETADO.md  README.md  README_PIPELINE.md  README_TESTING.md  REPORTE_ESTADO_AZURE_DOCKER.md  RESUMEN_PRUEBAS_FINALES.md  azure_deployment_summary.json  deploy_function.ps1  docker-compose.yml  pipeline_pyspark_documentacion.md  pyproject.toml  requirements.txt  test-data.csv  test_docker_data.csv
.github/: copilot-instructions.md
.mc/: config.json.old
azure_function/: function_app.py  host.json  requirements.txt
cfg/: defaults.yml
ci/: README.md  build-test.yml  check_config.sh  dataset_manifest_schema.yml  docker-compose.override.yml  lint.yml  test_dataset.yml  validate_schema.py
config/: azure_deployment.yml  data_factory_config.yml  database.yml  env.aws.prod.yml  env.azure.prod.yml  env.gcp.prod.yml  env.yml  env_local.yml  eventhub_config.yml  expectations.yml  pipeline_config.json  sample_pipeline.yml  schema_mapping.yml  spark-defaults.conf
databricks/: bundle.yml
datacore/: __init__.py
docker/: Dockerfile.pipeline  Dockerfile.runner  entrypoint.sh  entrypoint_pipeline.py
docs/: 01_pipeline_explicacion.ipynb  01_pipeline_explicacion_min.ipynb  ADR-0001-objetivos-portabilidad.md  AZURE_RESOURCES_EXPLORATION.md  CASOS_USO_AVANZADOS_IMPLEMENTACION_ACTUAL.md  CLEANUP_REPORT.md  CONFIG_CONSOLIDATION_ANALYSIS.md  DEPLOYMENT.md  DOCUMENTACION_GENERAL_PROYECTO.md  DOCUMENTACION_TECNICA_CODIGO.md  GITIGNORE_GUIDE.md  GOLD_LAYER_DATABASE.md  GUIA_REPRODUCCION_CASOS_USO.md  INFORME_IMPLEMENTACION_TRANSFORMACIONES.md  INNOVACIONES_TECNICAS_V2.md  INTEGRACION_SISTEMA.md  MANUAL_TESTING_GUIDE.md  PR1_issues.md  PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  REPORT.md  SECURITY.md  STABILIZATION_REPORT.md  VALIDACION_Y_ANALISIS_VALOR.md  architecture.md  azure-databricks.md  checklist.md  cleanup.json  configuration.md  connectors.md  deploy_azure_minimal.md  incremental.md  interfaces.md  multi_source_gold.md  refactor_plan.md  report.json  validations.md
examples/: README.md  endpoint_orders.yaml  jdbc_partitioned.yaml
jobs/: prodi_smoke_job.json
lib/datacore/: pyproject.toml
pipelines/: __init__.py  cli.py  common.py  sources.py  spark_job.py  spark_job_with_db.py  udf_catalog.py
samples/: README.md  toy_customers.csv
scripts/: aws_glue_submit.sh  build_and_push.sh  configure_azure_resources.py  create_payments_v1_sample.py  deploy-aci-integration.ps1  generate_big_payments.py  generate_synthetic_data.py  prepare_azure_deployment.py  run_aci.sh  run_high_volume_case.py  run_multiformat_case.py  run_pipeline.ps1  run_pipeline.sh  run_pipeline_compose.ps1  runner.sh  runner_with_db.sh  seed.ps1  seed.sh  setup-dev-environment.ps1  setup-dev-environment.sh  smoke_layers.sh  smoke_prod_configs.sh  teardown.ps1  test-aci-integration.ps1  test_azure_resources.ps1  test_docker_pipeline.ps1  test_monitoring.py  test_pipeline.ps1  test_pipeline_local.py  validate_gold_layer.py
src/: integrated_pipeline.py
terraform/: DEPLOYMENT_SUMMARY.md  OPTIMIZATION_FINAL_AUDIT.md  PIPELINE_TEST_RESULTS.md  PRE_CLEANUP_AUDIT.md  WORKAROUNDS.md  aci_integration.tf  container_registry.tf  datafactory.tf  eventhub.tf  keyvault.tf  main.tf  monitoring.tf  network.tf  outputs.tf  pipeline_test_data.csv  rbac.tf  security.tf  sql.tf  storage.tf  terraform.tfvars.example  variables.tf
test_data/: sample_data.csv
tests/: conftest.py  test_adapters_aws.py  test_adapters_azure.py  test_adapters_gcp.py  test_azure_integration.py  test_cleanup_canary.py  test_cli_layers.py  test_cli_smoke.py  test_common.py  test_config_schema.py  test_delta_merge.py  test_docker_pipeline.py  test_finance_configs.py  test_io_adapters.py  test_io_fs.py  test_io_http.py  test_io_jdbc.py  (+9 more)
(+335 files in other folders)
