[project]
name = "mvp-config-driven"
version = "0.2.1"
description = "Config-driven Spark pipeline orchestration"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9,<0.10",
    "pydantic>=2.8.0",
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
    "moto>=5.0.0",
]
scripts = { prodi = "datacore.cli:main" }

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = ["E","F","W","I","C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/datacore", "src/mvp_config_driven"]

[tool.coverage.report]
fail_under = 60
include = [
    "src/datacore/layers/*",
    "src/datacore/pipeline/*",
    "src/mvp_config_driven/core/*",
]
