[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "datacore"
version = "0.2.1"
description = "Config-driven Spark pipeline orchestration"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9,<0.10",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "fsspec>=2024.2.0",
    "adlfs>=2024.2.0",
    "gcsfs>=2024.2.0",
    "s3fs>=2024.2.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
]
scripts = { prodi = "datacore.cli:main" }

[tool.setuptools]
packages = ["datacore"]
package-dir = {"" = "../../src"}
